Create sdk package

--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-  "name": "se-2",
+  "name": "beccamose",
   "version": "0.0.1",
   "private": true,
   "workspaces": {
     "packages": [
       "packages/hardhat",
       "packages/nextjs",
-      "packages/subgraph"
+      "packages/subgraph",
+      "packages/sdk"
     ]
   },
   "scripts": {
-    "account": "yarn workspace @se-2/hardhat account",
-    "chain": "yarn workspace @se-2/hardhat chain",
-    "fork": "yarn workspace @se-2/hardhat fork",
-    "deploy": "yarn workspace @se-2/hardhat deploy",
-    "verify": "yarn workspace @se-2/hardhat verify",
-    "compile": "yarn workspace @se-2/hardhat compile",
-    "generate": "yarn workspace @se-2/hardhat generate",
-    "hardhat:lint": "yarn workspace @se-2/hardhat lint",
-    "hardhat:lint-staged": "yarn workspace @se-2/hardhat lint-staged",
-    "hardhat:test": "yarn workspace @se-2/hardhat test",
+    "account": "yarn workspace @beccamose/hardhat account",
+    "chain": "yarn workspace @beccamose/hardhat chain",
+    "fork": "yarn workspace @beccamose/hardhat fork",
+    "deploy": "yarn workspace @beccamose/hardhat deploy",
+    "verify": "yarn workspace @beccamose/hardhat verify",
+    "compile": "yarn workspace @beccamose/hardhat compile",
+    "generate": "yarn workspace @beccamose/hardhat generate",
+    "hardhat:lint": "yarn workspace @beccamose/hardhat lint",
+    "hardhat:lint-staged": "yarn workspace @beccamose/hardhat lint-staged",
+    "hardhat:test": "yarn workspace @beccamose/hardhat test",
     "test": "yarn hardhat:test",
-    "start": "yarn workspace @se-2/nextjs dev",
-    "next:lint": "yarn workspace @se-2/nextjs lint",
-    "next:format": "yarn workspace @se-2/nextjs format",
-    "next:check-types": "yarn workspace @se-2/nextjs check-types",
+    "start": "yarn workspace @beccamose/nextjs dev",
+    "next:lint": "yarn workspace @beccamose/nextjs lint",
+    "next:format": "yarn workspace @beccamose/nextjs format",
+    "next:check-types": "yarn workspace @beccamose/nextjs check-types",
+    "sdk:build": "yarn workspace @beccamose/sdk build",
     "postinstall": "husky install",
     "precommit": "lint-staged",
-    "vercel": "yarn workspace @se-2/nextjs vercel",
-    "vercel:yolo": "yarn workspace @se-2/nextjs vercel:yolo",
-    "stop-node": "yarn workspace @se-2/subgraph stop-node",
-    "clean-node": "yarn workspace @se-2/subgraph clean-node",
-    "run-node": "yarn workspace @se-2/subgraph run-node",
-    "local-create": "yarn workspace @se-2/subgraph local-create",
-    "local-ship": "yarn workspace @se-2/subgraph local-ship",
-    "abi-copy": "yarn workspace @se-2/subgraph abi-copy",
-    "codegen": "yarn workspace @se-2/subgraph codegen"
+    "vercel": "yarn workspace @beccamose/nextjs vercel",
+    "vercel:yolo": "yarn workspace @beccamose/nextjs vercel:yolo",
+    "stop-node": "yarn workspace @beccamose/subgraph stop-node",
+    "clean-node": "yarn workspace @beccamose/subgraph clean-node",
+    "run-node": "yarn workspace @beccamose/subgraph run-node",
+    "local-create": "yarn workspace @beccamose/subgraph local-create",
+    "local-ship": "yarn workspace @beccamose/subgraph local-ship",
+    "abi-copy": "yarn workspace @beccamose/subgraph abi-copy",
+    "codegen": "yarn workspace @beccamose/subgraph codegen"
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
