--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@se-2/nextjs",
+  "name": "@beccamose/nextjs",
   "private": true,
-  "version": "0.1.0",
+  "version": "0.0.1",
   "scripts": {
     "dev": "next dev",
     "start": "next dev",
