--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -20,10 +20,15 @@
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@waku/interfaces": "^0.0.18",
+    "@waku/react": "^0.0.5-77c40b4",
+    "@waku/sdk": "^0.0.19",
+    "class-variance-authority": "^0.7.0",
     "daisyui": "^3.5.1",
     "graphql": "^16.6.0",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
+    "protobufjs": "^7.2.5",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
@@ -31,6 +36,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
+    "tailwind-merge": "^1.14.0",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "^1.6.7",
