--- a/packages/sdk/package.json
+++ b/packages/sdk/package.json
@@ -26,6 +26,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@waku/interfaces": "^0.0.18",
+    "@waku/react": "^0.0.5-77c40b4",
+    "@waku/sdk": "^0.0.19",
+    "protobufjs": "^7.2.5",
     "typescript": "^5.2.2"
   },
   "devDependencies": {
