--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -36,6 +36,7 @@
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
+    "react-geolocated": "^4.1.2",
     "react-hot-toast": "^2.4.0",
     "tailwind-merge": "^1.14.0",
     "use-debounce": "^8.0.4",
