--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -22,6 +22,7 @@
     "@uniswap/v2-sdk": "^3.0.1",
     "daisyui": "^3.5.1",
     "graphql": "^16.6.0",
+    "leaflet": "^1.9.4",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
     "qrcode.react": "^3.1.0",
@@ -31,6 +32,7 @@
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.3.5",
     "react-hot-toast": "^2.4.0",
+    "react-leaflet": "^4.2.1",
     "use-debounce": "^8.0.4",
     "usehooks-ts": "^2.7.2",
     "viem": "^1.6.7",
@@ -39,6 +41,7 @@
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
+    "@types/leaflet": "^1.9.6",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
     "@types/react-blockies": "^1.4.1",
