Add crypto module

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -21,6 +21,7 @@
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "daisyui": "^3.5.1",
+    "eth-crypto": "^2.6.0",
     "graphql": "^16.6.0",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
