--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -19,10 +19,13 @@
     "@ethersproject/providers": "^5.7.2",
     "@heroicons/react": "^2.0.11",
     "@libp2p/interface-peer-store": "^2.0.4",
+    "@noble/curves": "^1.2.0",
     "@rainbow-me/rainbowkit": "1.0.8",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
+    "@waku/dns-discovery": "^0.0.17",
     "@waku/interfaces": "^0.0.18",
+    "@waku/peer-exchange": "^0.0.16",
     "@waku/react": "^0.0.5-77c40b4",
     "@waku/sdk": "^0.0.19",
     "class-variance-authority": "^0.7.0",
@@ -37,6 +40,7 @@
     "react-blockies": "^1.4.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.11",
     "react-fast-marquee": "^1.3.5",
     "react-geolocated": "^4.1.2",
     "react-hot-toast": "^2.4.0",
