--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -21,6 +21,8 @@
     "@libp2p/interface-peer-store": "^2.0.4",
     "@noble/curves": "^1.2.0",
     "@rainbow-me/rainbowkit": "1.0.8",
+    "@tanstack/react-query": "^4.36.1",
+    "@tanstack/react-query-devtools": "^4.36.1",
     "@uniswap/sdk-core": "^4.0.1",
     "@uniswap/v2-sdk": "^3.0.1",
     "@waku/dns-discovery": "^0.0.17",
@@ -40,7 +42,6 @@
     "react-blockies": "^1.4.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
     "react-fast-marquee": "^1.3.5",
     "react-geolocated": "^4.1.2",
     "react-hot-toast": "^2.4.0",
@@ -52,6 +53,7 @@
     "zustand": "^4.1.2"
   },
   "devDependencies": {
+    "@tanstack/eslint-plugin-query": "^4.36.1",
     "@trivago/prettier-plugin-sort-imports": "^4.1.1",
     "@types/node": "^17.0.35",
     "@types/react": "^18.0.9",
