--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -26,6 +26,7 @@
     "graphql": "^16.6.0",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
+    "qr-code-styling": "^1.6.0-rc.1",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-blockies": "^1.4.1",
