--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
   },
   "packageManager": "yarn@3.2.3",
   "devDependencies": {
+    "@types/react-dom": "^18.2.11",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3"
   },
