--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -45,6 +45,7 @@
     "@types/react": "^18.0.9",
     "@types/react-blockies": "^1.4.1",
     "@types/react-copy-to-clipboard": "^5.0.4",
+    "@types/react-dom": "^18.2.11",
     "@typescript-eslint/eslint-plugin": "^5.39.0",
     "autoprefixer": "^10.4.12",
     "eslint": "^8.15.0",
