Display blockie in leaflet map

--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -33,6 +33,7 @@
     "daisyui": "^3.5.1",
     "eth-crypto": "^2.6.0",
     "graphql": "^16.6.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "next": "^13.1.6",
     "nextjs-progressbar": "^0.0.16",
