--- a/packages/nextjs/package.json
+++ b/packages/nextjs/package.json
@@ -36,6 +36,7 @@
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "next": "^13.1.6",
+    "next-pwa": "^5.6.0",
     "nextjs-progressbar": "^0.0.16",
     "protobufjs": "^7.2.5",
     "qr-code-styling": "^1.6.0-rc.1",
